FFI (R3.6-F1): KofJsFfiBridge — host FFM bridge for the JS runner, gate CLOSED
Safe first slice of R3 fatia 3.6 (JS parity via GraalJS host bridge). The runner
IS a JVM with java.lang.foreign on the host, so the same downcall the JVM target
runs can serve the JS target (browser keeps honest FFI002, R7). Opening the whole
JS extern path in one step is a real regression risk to the JS backend (JS has
its own lowering: JsCallEmitter/JsRuntimeOps; isRuntimeOp does not route kof_ffi_),
so this F1 lands the host bridge PROVEN IN ISOLATION with the compiler gate
untouched — exactly the pattern that made DB002/ORM001 safe.

- kof-runtime/src/main/java/dev/kof/runtime/KofJsFfiBridge.java (new):
  `public static Object call(String lib, String name, String sig, Object[] args)`
  is a faithful port of the JVM target's `JvmFfiRuntime.kof_ffi` — same signature
  encoding (chars i/j/f/d/b/S + `v`), same `ValueLayout` map, same `asSpreader`
  over the boxed `Object[]`, same `char*`→String via `MemorySegment.getString`
  after `reinterpret(Long.MAX_VALUE)` with the NULL guard, same `void`→null.
  Companion `callVoid` for the FFI-void shape.

- kof-compiler/src/test/java/dev/kof/runtime/KofJsFfiBridgeTest.java (new, 8/8):
  host-level proof against real libc/libm — `abs(Int)→5`, `atoi(String)→42`,
  `sqrt(9.0)→3.0`, `pow(2.0,10.0)→1024.0`, `atol(String)→Long 1234567890123`
  (layout `j` proven on the host too), `strstr→"world"` (`char*`→String),
  `strstr` missing needle→null (not garbage), `srand(Int)` void→null + callVoid
  does not throw. Values mirror the JVM `FfiE2ETest` 1:1 → parity by construction.

- Gate NOT OPENED (R6, zero meio-aberto): `CompilerPipeline.isExternBound` is
  unchanged (JVM only); JS extern still emits `FFI002` in the compiler; nothing
  here is reachable from the compiler yet. The next session lands 3.6.F2 (JS
  lowering + `JsRuntimeOps` route + `KofJsRunner` `ProxyExecutable` +
  `KofFfi.supportedOn = JVM|JS` + runner launcher with `--enable-native-access`